# Khasra

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  README.md  RELEASE_A_SPRINT_A1.txt  ROADMAP.md  V2_NEXT_STEPS.txt  create_history_table.py  khewats.xlsx  launcher.py  main.py  pyproject.toml  requirements.txt
data/: haryana - Copy.db  haryana.db  haryana.sqbpro
database/: db.py  models.py
docs/: New Text Document.txt  data_model.md  partition_rules.md  partition_workflow.md  screen_flow.md
graphics/: parcel_item.py
gui/: area_calculator_dialog.py  export_screen.py  history_dialog.py  jamabandi_import_dialog.py  khasra_allocation_wizard.py  khewat_details.py  khewat_details_dialog.py  khewat_history.py  khewat_history_screen.py  khewat_screen.py  khewat_workbench.py  main_window.py  owner_ledger_dialog.py  owner_matrix_dialog.py  owner_screen.py  owner_summary_widget.py  partial_partition_wizard.py  partition_register.py  partition_simulation_window.py  partition_wizard.py  search_screen.py  share_calculator_dialog.py  validation_dialog.py  village_screen.py
services/: allocation_engine.py  area_service.py  khasra_allocation_engine.py  khewat_service.py  ownership_engine.py  ownership_lookup.py  partial_partition_engine.py  partition_engine.py  share_calculator.py  simulation_loader.py  simulation_storage.py  validation_engine.py
src/hpm.egg-info/: PKG-INFO  SOURCES.txt
tests/: conftest.py
tests/domain/: test_partition_case.py
tests/repositories/: test_sqlite_partition_case_repository.py
widgets/: khasra_widget.py  ownership_widget.py
(+30 files in other folders)
