[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hpm"
version = "0.1.0"
description = "Haryana Partition Manager"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "PySide6",
    "SQLAlchemy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]